--- a/python-server_side_rendering/templates/product_display.html
+++ b/python-server_side_rendering/templates/product_display.html
@@ -1,31 +1,31 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Product List</title>
+    <title>Items List</title>
 </head>
 <body>
     <h1>Product List</h1>
-
-    {% if error %}
-        <p style="color: red;">{{ error }}</p>
-    {% elif products %}
-        <table border="1">
-            <tr>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Price</th>
-            </tr>
-            {% for product in products %}
-                <tr>
-                    <td>{{ product.name }}</td>
-                    <td>{{ product.category }}</td>
-                    <td>{{ product.price }}</td>
-                </tr>
-            {% endfor %}
-        </table>
+    {% if message %}
+        <p>{{ message }}</p>
     {% else %}
-        <p>No products available.</p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Category</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for product in products %}
+                    <tr>
+                        <td>{{ product.name }}</td>
+                        <td>{{ product.category }}</td>
+                        <td>{{ product.price }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     {% endif %}
 </body>
 </html>
