--- a/python-server_side_rendering/templates/contact.html
+++ b/python-server_side_rendering/templates/contact.html
@@ -1,14 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Contact Us - My Flask App</title>
-</head>
-<body>
+  <head>
+    <title>Contact Us</title>
+  </head>
+  <body>
     {% include 'header.html' %}
-    
     <h1>Contact Us</h1>
-    <p>This is the contact page for My Flask App.</p>
-
+    <p>This page provides contact information.</p>
     {% include 'footer.html' %}
-</body>
+  </body>
 </html>
