--- a/python-server_side_rendering/templates/about.html
+++ b/python-server_side_rendering/templates/about.html
@@ -1,14 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>About Us - My Flask App</title>
-</head>
-<body>
+  <head>
+    <title>About Us</title>
+  </head>
+  <body>
     {% include 'header.html' %}
-    
     <h1>About Us</h1>
-    <p>This page gives information about the Flask application.</p>
-
+    <p>This page provides information about our application.</p>
     {% include 'footer.html' %}
-</body>
+  </body>
 </html>
