--- a/python-server_side_rendering/templates/index.html
+++ b/python-server_side_rendering/templates/index.html
@@ -1,19 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>My Flask App</title>
-</head>
-<body>
-    {% include 'header.html' %}
-    
+  </head>
+  <body>
     <h1>Welcome to My Flask App</h1>
     <p>This is a simple Flask application.</p>
     <ul>
-        <li>Flask</li>
-        <li>HTML</li>
-        <li>Templates</li>
+      <li>Flask</li>
+      <li>HTML</li>
+      <li>Templates</li>
     </ul>
-
-    {% include 'footer.html' %}
-</body>
+  </body>
 </html>
