--- a/python-server_side_rendering/templates/items.html
+++ b/python-server_side_rendering/templates/items.html
@@ -1,20 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Items List</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Items List</h1>
-
     {% if items %}
-        <ul>
-        {% for item in items %}
-            <li>{{ item }}</li>
-        {% endfor %}
-        </ul>
+    <ul>
+      {% for item in items %}
+      <li>{{ item }}</li>
+      {% endfor %}
+    </ul>
     {% else %}
-        <p>No items found.</p>
+    <p>No items found</p>
     {% endif %}
-</body>
+  </body>
 </html>
-`
